apps/photoprism/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoprism
  namespace: apps
  labels:
    app: photoprism
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photoprism
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
        - name: photoprism
          image: photoprism/photoprism:250707
          ports:
            - containerPort: 20800
          volumeMounts:
            - name: originals
              mountPath: /photoprism/originals
            - name: storage
              mountPath: /photoprism/storage
            - name: import
              mountPath: /photoprism/import
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "4"
              memory: "4Gi"
      volumes:
        - name: originals
          persistentVolumeClaim:
            claimName: photoprism-originals-pvc
        - name: storage
          persistentVolumeClaim:
            claimName: photoprism-storage-pvc
        - name: import
          persistentVolumeClaim:
            claimName: photoprism-import-pvc
