apps/photoprism/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: photoprism-proxy
  namespace: apps
subsets:
  - addresses:
      - ip: 10.0.0.4
    ports:
      - port: 20800
