apps/photoprism/ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoprism-external
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
    traefik.ingress.kubernetes.io/router.middlewares: infra-redirect-to-https@kubernetescrd
    traefik.ingress.kubernetes.io/proxy-body-size: "0"
    traefik.ingress.kubernetes.io/request-timeout: "1800"
    traefik.ingress.kubernetes.io/response-timeout: "1800"
    traefik.ingress.kubernetes.io/buffering: |
      maxrequestbodybytes: 10737418240
      memrequestbodybytes: 10737418240

spec:
  rules:
  - host: old.photos.progist.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: photoprism
            port:
              number: 80
  tls:
  - hosts:
    - old.photos.progist.ru
    secretName: photoprism-external-tls
