apps/photoprism/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoprism-internal
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: root-ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
    traefik.ingress.kubernetes.io/router.middlewares: infra-redirect-to-https@kubernetescrd,infra-large-payload@kubernetescrd
    traefik.ingress.kubernetes.io/proxy-body-size: "0"
    traefik.ingress.kubernetes.io/request-timeout: "1800"
    traefik.ingress.kubernetes.io/response-timeout: "1800"
spec:
  rules:
  - host: old.photos.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: photoprism
            port:
              number: 80
  tls:
  - hosts:
    - old.photos.home
    secretName: photoprism-internal-tls
